@@ -15,6 +15,8 @@ choose-mirror (1.12) UNRELEASED; urgency=low
     - Give debian/choose-mirror.templates the same mtime as
       debian/choose-mirror.templates.in, so that po2debconf doesn't decide
       that it needs to run debconf-updatepo on every binary package build.
+    - Add the facility to have different default mirrors, directories, etc.
+      on different architectures.
 
  -- Colin Watson <cjwatson@debian.org>  Fri,  3 Jun 2005 12:10:54 +0100
 
